Name:                OutlineGrep
Version:             1.0
Description:         Search through indentation-structured text files.
License:             MIT
License-file:        README.markdown
Author:              Matt Brubeck
Maintainer:          mbrubeck@limpet.net
Build-Type:          Simple
Cabal-Version:       >=1.2
Data-Files:          compleat_setup
Executable ogrep
  Main-is:           OutlineGrep.lhs
  Build-Depends:     base >= 3 && < 5, haskell98, regex-posix
