Name:                OutlineGrep
Version:             1.0
Description:         Search through indentation-structured text files.
License:             MIT
License-file:        README.markdown
Author:              Matt Brubeck
Maintainer:          mbrubeck@limpet.net
Build-Type:          Simple
Cabal-Version:       >=1.2
Executable ogrep
  Main-is:           OutlineGrep.lhs
  Build-Depends:     base >= 4, regex-posix
